fix: dis outputh delete

--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "dist/output.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
