--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^14.15.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "angular-cli-ghpages": "^1.0.7",
     "eslint": "^8.41.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
