--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "/",
             "preserveSymlinks": true,
             "outputPath": "docs",
             "index": "src/index.html",
@@ -94,10 +95,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ataix_kz_new:build:production"
+              "browserTarget": "hayk-manukyan:build:production"
             },
             "development": {
-              "browserTarget": "ataix_kz_new:build:development"
+              "browserTarget": "hayk-manukyan:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -105,7 +106,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ataix_kz_new:build"
+            "browserTarget": "hayk-manukyan:build"
           }
         },
         "test": {
@@ -138,7 +139,6 @@
               "outputHashing": "media"
             },
             "development": {
-              "buildOptimizer": false,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -157,12 +157,12 @@
           "builder": "@nguniversal/builders:ssr-dev-server",
           "configurations": {
             "development": {
-              "browserTarget": "ataix_kz_new:build:development",
-              "serverTarget": "ataix_kz_new:server:development"
+              "browserTarget": "hayk-manukyan:build:development",
+              "serverTarget": "hayk-manukyan:server:development"
             },
             "production": {
-              "browserTarget": "ataix_kz_new:build:production",
-              "serverTarget": "ataix_kz_new:server:production"
+              "browserTarget": "hayk-manukyan:build:production",
+              "serverTarget": "hayk-manukyan:server:production"
             }
           },
           "defaultConfiguration": "development"
@@ -171,32 +171,20 @@
           "builder": "@nguniversal/builders:prerender",
           "configurations": {
             "production": {
-              "browserTarget": "ataix_kz_new:build:production",
-              "serverTarget": "ataix_kz_new:server:production"
+              "browserTarget": "hayk-manukyan:build:production",
+              "serverTarget": "hayk-manukyan:server:production"
             },
             "development": {
-              "browserTarget": "ataix_kz_new:build:development",
-              "serverTarget": "ataix_kz_new:server:development"
+              "browserTarget": "hayk-manukyan:build:development",
+              "serverTarget": "hayk-manukyan:server:development"
             }
           },
           "defaultConfiguration": "production"
         },
-        "lint": {
-          "builder": "@angular-eslint/builder:lint",
-          "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
-          }
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
-  },
-  "cli": {
-    "analytics": false,
-    "schematicCollections": [
-      "@angular-eslint/schematics"
-    ]
   }
 }
